--- a/G3L.Examples/G3L.Examples.NTier.BLL/G3L.Examples.NTier.BLL.csproj
+++ b/G3L.Examples/G3L.Examples.NTier.BLL/G3L.Examples.NTier.BLL.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\G3L.Examples.NTier.DAL\G3L.Examples.NTier.DAL.csproj" />
+    </ItemGroup>
+
 </Project>
