--- a/G3L.Examples/G3L.Examples.DDD.Domain/G3L.Examples.DDD.Domain.csproj
+++ b/G3L.Examples/G3L.Examples.DDD.Domain/G3L.Examples.DDD.Domain.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Scrutor" Version="3.3.0" />
+    </ItemGroup>
+
 </Project>
