Added Minimal Api to .net 6 project

--- a/NTier Architecture .Net 6.0/G3L.Examples.NTier.APIv6/appsettings.json
+++ b/NTier Architecture .Net 6.0/G3L.Examples.NTier.APIv6/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NTier-demo": ""
+    "NTier-demo": "Server=.;Database=Visitor_NTier_Net5;Trusted_Connection=True;"
   }
 }
