--- a/MicroServices/MicroServices.CompanyService.BLL/MicroServices.CompanyService.BLL.csproj
+++ b/MicroServices/MicroServices.CompanyService.BLL/MicroServices.CompanyService.BLL.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\MicroServices.Common.BLL\MicroServices.Common.BLL.csproj" />
       <ProjectReference Include="..\MicroServices.CompanyService.DAL\MicroServices.CompanyService.DAL.csproj" />
     </ItemGroup>
 
