--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/MicroServices.CompanyService.BlazorServerSide.csproj
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/MicroServices.CompanyService.BlazorServerSide.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,6 +12,30 @@
 
   <ItemGroup>
     <Folder Include="Components\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Blazorise" Version="0.9.5.2" />
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.5.2" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.5.2" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.9.5.2" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.5.2" />
+    <PackageReference Include="Blazorise.Snackbar" Version="0.9.5.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Translations\CompanyTranslations.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CompanyTranslations.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Translations\CompanyTranslations.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>CompanyTranslations.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
